<resources>
    <string name="app_name">PlaySports</string>
    <string name="CalenderText">Choose room and date</string>
    <string name="select_room_and_date">Select room and date</string>
    <string name="menu">MENU</string>
    <string name="make_regular_booking">Make regular booking</string>
    <string name="my_bookings">My bookings</string>
    <string name="sing_out">sing out</string>
    <string name="make_a_booking">Make a booking</string>
    <string name="textview">TextView</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="press_the_button_to_confirm">Press the button to confirm</string>
    <string name="welcome_to_playsports">Welcome to PlaySports!</string>
    <string name="please_sign_in_or_register">Please sign in or register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="button">Button</string>
    <string name="password_again">Password again</string>
    <string name="register">Register</string>
    <string name="update_your_information">Update your information</string>
    <string name="adress">Adress</string>
    <string name="password_6_16_char">Password (12-32 char)</string>
    <string name="user_info">User info</string>
    <string name="welcome_to_playsports_admin">Welcome to PlaySports admin!</string>
    <string name="manage_rooms">Manage rooms</string>
    <string name="choose_room_to_delete_or_add_new">Choose room to delete or add new</string>
    <string name="delete_room">Delete room</string>
    <string name="add_room">Add room</string>
    <string name="room_to_add">Room name</string>
    <string name="main">Main</string>
    <string name="sport">Sport:</string>
    <string name="weekday">Weekday</string>
    <string name="regular_reservation">Regular Reservation</string>
    <string name="room">Room:</string>
    <string name="available_times">Available times:</string>
    <string name="find">Find</string>
    <string name="choose_starting_day">Choose starting day</string>
    <string name="x">x</string>
    <string name="give_current_password">Give current password</string>
    <string name="give_new_password_again">Give new password again</string>
    <string name="change_password">Change password</string>
    <string name="give_new_password">Give new password</string>
    <string name="give_the_following_code">Give the following code:</string>
</resources>
