<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manageRooms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFF3FA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="352dp"
        android:layout_height="84dp"
        android:text="@string/welcome_to_playsports_admin"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:text="@string/make_regular_booking"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:onClick="openMyReservationsActivity1"
        android:text="@string/my_bookings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:onClick="signOut1"
        android:text="@string/sing_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.644" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:onClick="openCalendarActivity1"
        android:text="@string/make_a_booking"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/userInfo"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:onClick="openUserInfoActivity1"
        android:text="@string/user_info"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/button10"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/calender"
        android:onClick="openManageRoomsActivity1"
        android:text="@string/manage_rooms"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>