<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:text="@string/please_sign_in_or_register"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014" />

        <EditText
            android:id="@+id/userSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp" />
        <EditText
            android:id="@+id/passSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/warning1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toTopOf="@+id/userReg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSign"
            app:layout_constraintVertical_bias="0.23" />
        <Button
            android:id="@+id/buttonSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calender"
            android:onClick="signInButton"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.25" />



        <EditText
            android:id="@+id/userReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginTop="50dp" />



        <EditText
            android:id="@+id/passReg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_6_16_char"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/passReg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_again"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_marginTop="15dp" />
        <TextView
            android:id="@+id/warning2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/buttonReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calender"
            android:onClick="register"
            android:text="@string/register"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>