<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFF3FA"
    tools:context=".ManageRoomsActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="77dp"
        android:text="@string/choose_room_to_delete_or_add_new"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="348dp"
        android:layout_height="35dp"
        android:background="@drawable/calender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/button11"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/calender"
        android:text="@string/delete_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/addRoom"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/calender"
        android:hint="@string/room_to_add"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintVertical_bias="0.302" />

    <Button
        android:id="@+id/button12"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/calender"
        android:text="@string/add_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRoom"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/calender"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

</androidx.constraintlayout.widget.ConstraintLayout>