<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AdminViewActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="261dp"
            android:layout_height="77dp"
            android:text="@string/choose_room_to_delete_or_add_new"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Upon room removal you might experience some unexpected crashes, recommended to reset progress"/>
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="348dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/calender" />

        <Button
            android:id="@+id/button11"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/calender"
            android:onClick="deleteRoomFromList"
            android:text="@string/delete_room" />


        <EditText
            android:id="@+id/addRoom"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/calender"
            android:hint="@string/room_to_add"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addRoomId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addRoom"
            android:layout_marginTop="10dp"
            android:background="@drawable/calender"
            android:ems="10"
            android:hint="Room id"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button12"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/calender"
            android:onClick="addRoomToList"
            android:text="@string/add_room" />

        <Button
            android:id="@+id/button13"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/calender"
            android:onClick="backButton"
            android:text="@string/back" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/calender"
            android:onClick="resetProgress"
            android:text="Reset Progress" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>